--- a/src/app/main/items-block/items-block.component.scss
+++ b/src/app/main/items-block/items-block.component.scss
@@ -23,7 +23,7 @@
   #news_items, #sales_items, #recommend_items, #factories_items {
     .header-section {
       height:150px;
-      h2 {font-size: 3rem}
+      h2 { font-size:3rem }
     }
     padding-bottom:0;
   }
@@ -35,20 +35,21 @@
       svg { width:100%; height:100%; }
     }
   }
-  @media (max-width: 1250px) {
+  @media (max-width:1250px) {
     #news_items, #sales_items, #recommend_items, #factories_items {
       .header-section {
-        h2 { font-size:2.5rem;}
+        h2 { font-size:2.5rem; }
       }
     }
   }
-  @media (max-width: 959px) {
+  @media (max-width:959px) {
     #news_items, #sales_items, #recommend_items, #factories_items {
       .header-section {
         h2 { font-size:2rem; }
+        .paragraph { font-size:1rem; }
         &__more { left:auto; right:.75rem; transform:translateY(-50%); }
       }
     }
   }
-  .items {transform: translateY(-36px)}
+  .items { transform:translateY(-36px) }
 }
